# AI4Green4Students

./: .editorconfig  .eslintrc.yaml  AI4Green4Students.sln  README.md  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/: labeler.yml  pull_request_template.md
.github/workflows/: build.ai4green4students-api.yml  build.ai4green4students-client-app.yml  deploy.ai4green4students-web-app.yml  deploy.workers.yml  label.yml  test.ai4green4students-api.yml  validate.workers-dependencies.yml
AI4Green4Students.Test/: AI4Green4Students.Tests.csproj  CommentServiceTests.cs  DataSeeder.cs  DatabaseFixture.cs  FieldServiceTests.cs  PlanServiceTests.cs  ProjectServiceTests.cs  RegistrationRulesServiceTests.cs  SectionFormServiceFixture.cs  SectionFormServiceTests.cs  SectionServiceTests.cs  StageServiceTests.cs  StringConstants.cs
AI4Green4Students.Test/Fixtures/: DatabaseFixture.cs  ExportServiceFixture.cs  FieldResponseServiceFixture.cs  (+3 more)
app/workers/: local.settings.json  pyproject.toml
app/workers/PredictProduct/: __init__.py  function.json
app/workers/PredictProduct/helpers/: model_runner.py  reaction_drawer.py  smiles.py
app/workers/PredictProduct/models/: dto.py
app/workers/PredictProduct/services/: predict.py  pubchem_api.py
app/workers/ReactionTable/: __init__.py  function.json
app/workers/ReactionTable/configs/: database.py
app/workers/ReactionTable/helpers/: __init__.py  smiles_processor.py
app/workers/ReactionTable/models/: data.py  dto.py
app/workers/ReactionTable/services/: compound.py
(+804 files in other folders)
